@@ -1,3 +1,11 @@
+2008-07-31  Ramon Novoa  <rnovoa@artica.es>
+
+	* win32/pandora_windows_service.cc: Small fixes.
+	* win32/modules/pandora_module.cc: time() and localtime() are used
+	  instead of GetSystemTime().
+	* win32/pandora.h: Changed all instances of "Pandora" to
+	  "Pandora FMS".
+
 2008-07-30  Ramon Novoa  <rnovoa@artica.es>
 
 	* win32/windows/pandora_wmi.cc: Fixed typo bug.
